# car_factory

./: Readme.md
backend/: .dockerignore  .env  .gitignore  Dockerfile  Makefile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 15019ec30eda_.py  2e831fb9430f_fix_date_v2.py  92fa9575626e_.py  9b8b21a92a44_.py  a0834fe77f0a_.py  a5963038da03_fix_date.py  b4addfc13a5f_.py  b610e7a3eec1_.py
backend/docker_compose/: app.yaml  storages.yaml
backend/src/: config.py  crud.py  database.py  dependencies.py  main.py  models.py  router.py  schemas.py
