[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Artem <Gakerchannel@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "1.13.3"
annotated-types = "0.7.0"
anyio = "4.6.0"
asyncpg = "0.29.0"
fastapi = "0.115.0"
greenlet = "3.1.1"
idna = "3.10"
mako = "1.3.5"
markupsafe = "2.1.5"
pydantic = "2.9.2"
pydantic-settings = "2.5.2"
pydantic-core = "2.23.4"
python-dotenv = "1.0.1"
sniffio = "1.3.1"
sqlalchemy = "2.0.35"
starlette = "0.38.6"
typing-extensions = "4.12.2"
uvicorn = "^0.31.1"
python-multipart = "^0.0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
